--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<button id='openModal'>Open Modal</button>
+	<div class='modal'>
+		<div class='modal-content'>
+			<h1>Modal Header</h1>
+			<div class='modal-body'>
+				<div>Modal Body Content</div>
+				<div>x</div>
+			</div>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
