--- a/main.html
+++ b/main.html
@@ -1,26 +1,12 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-	<button id='openModal'>Open Modal</button>
-	<div class='modal'>
-		<div class='modal-content'>
-			<h1>Modal Header</h1>
-			<div class='modal-body'>
-				<div>Modal Body Content</div>
-				<div>x</div>
-			</div>
-		</div>
-	</div>
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
-</html>
+<button id='openModal'>Open Modal</button>
+<div class='modal' id='modal'> <!-- Add id for JS -->
+  <div class='modal-content'>
+    <div class='modal-header'>      <!-- ❌ Missing -->
+      <h2>Modal Header</h2>        <!-- ❌ You used h1 -->
+      <span class='close-modal'>×</span>  <!-- ❌ Close btn in wrong place -->
+    </div>
+    <div class='modal-body'>         <!-- ✅ Correct class -->
+      <p>Modal Body Content</p>      <!-- ❌ You used div -->
+    </div>
+  </div>
+</div>
