--- a/main.html
+++ b/main.html
@@ -1,12 +1,12 @@
 <button id='openModal'>Open Modal</button>
-<div class='modal' id='modal'> <!-- Add id for JS -->
+<div class='modal' id='modal'>
   <div class='modal-content'>
-    <div class='modal-header'>      <!-- ❌ Missing -->
-      <h2>Modal Header</h2>        <!-- ❌ You used h1 -->
-      <span class='close-modal'>×</span>  <!-- ❌ Close btn in wrong place -->
+    <div class='modal-header'>
+      <h2>Modal Header</h2>
+      <span class='close-modal'>×</span>
     </div>
-    <div class='modal-body'>         <!-- ✅ Correct class -->
-      <p>Modal Body Content</p>      <!-- ❌ You used div -->
+    <div class='modal-body'>
+      <p>Modal Body Content</p>
     </div>
   </div>
 </div>
