--- a/main.html
+++ b/main.html
@@ -1,11 +1,12 @@
-<button id='openModal'>Open Modal</button>
-<div class='modal' id='modal'>
-  <div class='modal-content'>
-    <div class='modal-header'>
+<button id="openModal">Open Modal</button>
+
+<div class="modal" id="modal">
+  <div class="modal-content">
+    <div class="modal-header">
       <h2>Modal Header</h2>
-      <span class='close-modal'>×</span>
+      <span class="close-modal">&times;</span>
     </div>
-    <div class='modal-body'>
+    <div class="modal-body">
       <p>Modal Body Content</p>
     </div>
   </div>
